--- a/Unit Converter/Heavy duty/task.html
+++ b/Unit Converter/Heavy duty/task.html
@@ -28,7 +28,7 @@
 
 <p>For your convenience, make a break line after each unit conversion.</p>
 
-<p>In this stage, your program should also be able to handle errors. If the user attempts to perform an impossible conversion, for example, meters to kilograms, the program should output an appropriate error message: <code class="java">Convertion from meters to kilograms is impossible</code>. If the program cannot recognize one of the units or both, output a message <code class="java">Convertion from ??? to kilograms is impossible</code> where <code class="java">???</code> marks the unknown unit.</p>
+<p>In this stage, your program should also be able to handle errors. If the user attempts to perform an impossible conversion, for example, meters to kilograms, the program should output an appropriate error message: <code class="java">Conversion from meters to kilograms is impossible</code>. If the program cannot recognize one of the units or both, output a message <code class="java">Conversion from ??? to kilograms is impossible</code> where <code class="java">???</code> marks the unknown unit.</p>
 
 <p>Finally, since we have all these new units, let's make our program run until the user decides to exit the converter.</p>
 
